test/Interop/Cxx/class/returns-unavailable-class.code
// RUN: rm -rf %t
// RUN: split-file %s %t
// RUN: %target-language-ide-test -print-module -module-to-print=CxxModule -I %t/Inputs -source-filename=x -enable-experimental-cxx-interop | %FileCheck %s

// RUN: %target-language-frontend -typecheck -verify -I %t/Inputs -enable-experimental-cxx-interop %t/test.code

//--- Inputs/module.modulemap
module CxxTypes {
    header "types.h"
    requires cplusplus
}

module CxxModule {
    header "header.h"
    requires cplusplus
}

//--- Inputs/types.h

template<class T>
class TemplateInTypesModule {
public:
    T x, y;
};

//--- Inputs/header.h

#pragma clang module import CxxTypes

class Struct {
public:
    int x, y;

    TemplateInTypesModule<int> returnsClassInTypesModules() const;

    void takesClassInTypesModules(TemplateInTypesModule<int>) const;
    void takesClassInTypesModulesRef(const TemplateInTypesModule<int> &) const;
};

// CHECK: struct Struct {
// CHECK-NEXT:   init()
// CHECK-NEXT:   init(x: Int32, y: Int32)
// CHECK-NEXT:   fn returnsClassInTypesModules() -> Never
// CHECK-NEXT:   var x: Int32
// CHECK-NEXT:   var y: Int32
// CHECK-NEXT: }

TemplateInTypesModule<int> funcWithClassInTypesModules();
void funcWithClassInTypesModulesParam(TemplateInTypesModule<int>);
void funcWithClassInTypesModulesParamRef(const TemplateInTypesModule<int> &);

class StructPrivateDestructor {
public:
    StructPrivateDestructor();
private:
    ~StructPrivateDestructor();
};

StructPrivateDestructor returnsStructPrivateDestructor();

//--- test.code

import CxxModule

fn test() {
    funcWithClassInTypesModules() // expected-error {{'funcWithClassInTypesModules()' is unavailable: return type is unavailable in Codira}}
    Struct().returnsClassInTypesModules() // expected-error {{'returnsClassInTypesModules()' is unavailable: return type is unavailable in Codira}}
}

fn test2() {
    funcWithClassInTypesModules() // expected-error {{'funcWithClassInTypesModules()' is unavailable: return type is unavailable in Codira}}
}

fn testPrivateDesType() {
    returnsStructPrivateDestructor() // expected-error {{'returnsStructPrivateDestructor()' is unavailable: return type is unavailable in Codira}}
}
